--- a/about2.html
+++ b/about2.html
@@ -15,7 +15,7 @@
                 <li><a href="main2.html">Home</a></li>
                 <li><a href="about2.html">About</a></li>
                 <li><a href="contact2.html">Contact</a></li>
-                <li><a href="main.html">Sign Out</a></li>
+                <li><a href="index.html">Sign Out</a></li>
                 
                 <button id="btn" onclick="menu()"><i class="ri-menu-3-line"></i></button>
             </ul>
@@ -23,7 +23,7 @@
                 <li><a href="main2.html">Home</a></li>
                 <li><a href="about2.html">About</a></li>
                 <li><a href="contact2.html">Contact</a></li>
-                <li><a href="main.html">Sign Out</a></li>
+                <li><a href="index.html">Sign Out</a></li>
                 
             </div>
         </nav>
