--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <nav>
         <label class="logo">EzNotes</label>
         <ul>
-            <li><a href="main.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="SignIn.html">Sign-In</a></li>
             <button id="btn" onclick="menu()"><i class="ri-menu-3-line"></i></button>
         </ul>
         <div class="drop" id="menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="SignIn.html">Sign-In</a></li>
