--- a/Bcs.html
+++ b/Bcs.html
@@ -39,7 +39,7 @@
                   <h4>First Year</h4>
                   <p>SEM 1</p>
                   <p>SEM 2</p>
-                  <button type="button" onclick="fy()" class="btn btn-success">View</button>
+                  <!--<button type="button" onclick="fy()" class="btn btn-success">View</button>-->
                </center>
           </div>
           
@@ -48,7 +48,7 @@
                   <h4>Second Year</h4>
                   <p>SEM 3</p>
                   <p>SEM 4</p>
-                  <button type="button" onclick="sy()" class="btn btn-success">View</button>
+                  <!--<button type="button" onclick="sy()" class="btn btn-success">View</button>-->
               </center>
           </div>
          
